made links actual links instead of text

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
   <li>
     <%= link.id %>
     title: <%= link.title %>
-    url: <%= link.url %>
+    url: <a href="<%= link.url %>"><%= link.url %></a>
   </li>
   <% end %>
 </ul>
