Extracted data mapper and passed user story 3

--- a/views/form.erb
+++ b/views/form.erb
@@ -3,5 +3,6 @@
 <form action="/links" method="post">
   Enter Title <input type="text" name="title" placeholder="Title" required>
   Enter URL <input type="url" name="url" placeholder="url" required>
+  Enter Tag <input type="text" name="tag" placeholder="Tag">
   <input type="submit" value="Create New">
 </form>
