added password confirmation

--- a/app/views/users.erb
+++ b/app/views/users.erb
@@ -3,5 +3,6 @@
 <form action="/users" method="post">
   Enter Email<input name="email" type="text"/>
   Enter Password<input name="password" type="password"/>
+  Re Enter Password<input name="password_confirmation" type="password"/>
   <input type="submit" value="Sign Up"/>
 </form>
